Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.1
-
None
-
f2219ce983098fc14655d8f3bb8a7fee2c9abe4d
Description
See attached file.
When an ImageViewer::Status value is emitted from C++, it is received in the QML signal as a QVariant(ImageViewer::Status) value, instead of the actual enum value.
The enum has already been registered using:
- Q_ENUMS
- Q_DECLARE_METATYPE (as ImageViewer::Status)
- qRegisterMetaType (as ImageViewer::Status)
Attachments
Issue Links
- replaces
-
QTBUG-14978 QML cannot use registered enums as signal handler parameters
-
- Closed
-
- resulted in
-
QTBUG-18636 Provide API functionality to determine whether a registered type refers to an enum
-
- Closed
-