New: GameEnded command

Going to start wth forfeit-by-disconnect, but should be used for all kind of
game endings (see Game::Reason enum for ideas). Exposed to UI through
Miniature::gameEnded signal (together with Miniature::Result and
Miniature::Reason enums). Watch out for (still valid?) issues with QML signals
and enums: https://bugreports.qt.nokia.com/browse/QTBUG-15983