game/commands/gameended.cc
@@ -18,17 +18,36 @@
  * along with Miniature. If not, see <http://www.gnu.org/licenses/>.
  */
 
-#include "abstractcommand.h"
-#include "commands/login.h"
-#include "commands/logout.h"
-#include "commands/loginfailed.h"
-#include "commands/advertisement.h"
-#include "commands/record.h"
-#include "commands/play.h"
-#include "commands/move.h"
-#include "commands/creategame.h"
-#include "commands/activategame.h"
-#include "commands/seek.h"
-#include "commands/invalidmove.h"
-#include "commands/invalidseek.h"
-#include "commands/gameended.h"
+#include "gameended.h"
+#include "frontend/miniature.h"
+
+namespace Game { namespace Command {
+
+GameEnded::GameEnded(Target target,
+                     uint game_id,
+                     Result result,
+                     Reason reason,
+                     const QByteArray &player_name)
+    : AbstractCommand(target)
+    , m_game_id(game_id)
+    , m_result(result)
+    , m_reason(reason)
+    , m_player_name(player_name)
+{}
+
+GameEnded::~GameEnded()
+{}
+
+void GameEnded::exec(Dispatcher *,
+                     Frontend::Miniature *target)
+{
+    if (not target) {
+        return;
+    }
+
+    // QML still has issues with signals and enums?
+    // https://bugreports.qt.nokia.com/browse/QTBUG-15983
+    emit target->gameEnded(static_cast<int>(m_result), static_cast<int>(m_reason));
+}
+
+}} // namespace Command, Game
