game/commands/commands.pri
@@ -13,6 +13,7 @@ HEADERS += \
     $${COMMANDS_DIR}/seek.h \
     $${COMMANDS_DIR}/invalidseek.h \
     $${COMMANDS_DIR}/invalidmove.h \
+    $${COMMANDS_DIR}/gameended.h \
 
 SOURCES += \
     $${COMMANDS_DIR}/login.cc \
@@ -27,6 +28,7 @@ SOURCES += \
     $${COMMANDS_DIR}/seek.cc \
     $${COMMANDS_DIR}/invalidseek.cc \
     $${COMMANDS_DIR}/invalidmove.cc \
+    $${COMMANDS_DIR}/gameended.cc \
 
 #INCLUDEPATH += $${COMMANDS_DIR}
 DEPENDPATH += $${COMMANDS_DIR}
