src/src.pro
@@ -41,6 +41,7 @@ LIBS += \
         $${GAME_DIR}/commands/seek.h \
         $${GAME_DIR}/commands/invalidseek.h \
         $${GAME_DIR}/commands/invalidmove.h \
+        $${GAME_DIR}/commands/gameended.h \
         $${GAME_DIR}/frontend/miniature.h \
         $${GAME_DIR}/frontend/chessboard.h \
         $${GAME_DIR}/frontend/sideelement.h \
@@ -72,6 +73,7 @@ LIBS += \
         $${GAME_DIR}/commands/seek.cc \
         $${GAME_DIR}/commands/invalidseek.cc \
         $${GAME_DIR}/commands/invalidmove.cc \
+        $${GAME_DIR}/commands/gameended.cc \
         $${GAME_DIR}/frontend/miniature.cc \
         $${GAME_DIR}/frontend/chessboard.cc \
         $${GAME_DIR}/frontend/sideelement.cc \
